--- a/table-sorting/src/components/TableSorter/table.css
+++ b/table-sorting/src/components/TableSorter/table.css
@@ -33,7 +33,7 @@
 #sortable-table__first-column-control + table > thead th:first-child .fa-angle-double-right { display: none; }
 @media (max-width: 1024px){
 /* First Column behavior on mobile */
-  #sortable-table__first-column-control + table > tr > *:first-child span{
+  #sortable-table__first-column-control + table tr > *:first-child span{
     white-space: nowrap;
     white-space: break-spaces;
     overflow: hidden;
@@ -42,7 +42,7 @@
     /* display: inline-block; */
     font-size: .7rem;
   }
-  #sortable-table__first-column-control:checked + table > tr > *:first-child span{
+  #sortable-table__first-column-control:checked + table tr > *:first-child span{
     display: inline;
     width: auto;
   }
@@ -50,7 +50,7 @@
   #sortable-table__first-column-control + table > thead th:first-child .fa-angle-double-left { display: inline; }
   #sortable-table__first-column-control:checked + table > thead th:first-child .fa-angle-double-right { display: inline; }
   #sortable-table__first-column-control:checked + table > thead th:first-child .fa-angle-double-left { display: none; }
-  #sortable-table__first-column-control:checked + table > tr > *:first-child span { display: none; }
+  #sortable-table__first-column-control:checked + table tr > *:first-child span { display: none; }
   
   .sortable-table__container table tr th span{
     font-size: .9rem;
